<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    -

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/lyla_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/lyla"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/me_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/lyla_text_view"
            android:layout_toRightOf="@id/lyla_text_view"
            android:text="@string/me"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/natalie_text_view"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lyla_text_view"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/ben_text_view"
            android:layout_toLeftOf="@+id/ben_text_view"
            android:text="@string/natalie"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/jennie_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/jennie"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/omoju_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/jennie_text_view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="2dp"
            android:text="@string/omoju"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/amy_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/omoju_text_view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:text="@string/amy"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/ben_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="186dp"
            android:layout_marginRight="186dp"
            android:text="@string/ben"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/kagure_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="107dp"
            android:layout_marginRight="107dp"
            android:text="@string/kagure"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>